# confluence-scraper-mcp

./: .coverage  .coverage.Anns-MacBook-Air.local.21229.XhSBOVNx  .env  .env.template  .gitignore  MANIFEST.in  README.md  config.json  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
app/: main.py
app/api/mcp/: models.py  router.py
app/core/: config.py
app/services/: chromadb.py  confluence.py  rag.py
docs/: PRD.md
examples/: mcp.json
tests/: .env.test  conftest.py  test_api.py  test_chromadb.py  test_confluence.py  test_rag.py
